build: init project v1.7