@@ -2,20 +2,25 @@ package com.henry.util;
 
 import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
 import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import co.elastic.clients.elasticsearch._types.query_dsl.RangeQuery;
 import com.henry.base.domain.request.BaseSort;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.elasticsearch.client.elc.NativeQueryBuilder;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 
+import java.text.SimpleDateFormat;
+import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class ElasticsearchUtils {
+
+    private static final SimpleDateFormat DATE_FORMAT = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'");
 
     public static NativeQueryBuilder getQueryBuildersSort(NativeQueryBuilder queryBuilder, List<BaseSort> sorts) {
         if (CollectionUtils.isEmpty(sorts)) return queryBuilder;
@@ -26,20 +31,15 @@ public class ElasticsearchUtils {
     public static Query buildQueryBuilderWithFields(List<String> fields, String value) {
         if (StringUtils.isBlank(value) || CollectionUtils.isEmpty(fields)) return Query.of(q -> q.bool(b -> b));
 
-        BoolQuery boolQuery = BoolQuery.of(b -> {
-            fields.forEach(field -> b.should(s -> s.match(m -> m.field(field).query(value))));
-            return b;
-        });
+        BoolQuery boolQuery = BoolQuery.of(b -> b.should(s -> s.multiMatch(mm -> mm.fields(fields).query(value))));
 
         return Query.of(q -> q.bool(boolQuery));
     }
 
     public static Query buildFilterQueryWithValues(String field, List<String> values) {
-        if (CollectionUtils.isEmpty(values)) return null;
-
         List<Query> termQueries = values.stream()
                 .map(value -> Query.of(q -> q.term(t -> t.field(field).value(value))))
-                .collect(Collectors.toList());
+                .toList();
 
         return Query.of(q -> q.bool(b -> b.must(termQueries)));
     }
@@ -47,6 +47,32 @@ public class ElasticsearchUtils {
     public static Query buildFilterQueryWithValue(String field, String value) {
         return Query.of(q -> q.bool(b -> b.must(s -> s.term(m -> m.field(field).value(value)))));
     }
+
+    public static Query buildMustNotFilterQueryWithValues(String field, List<String> values) {
+        List<Query> mustNotQueries = values.stream()
+                .map(value -> Query.of(q -> q.term(t -> t.field(field).value(value))))
+                .toList();
+
+        return Query.of(q -> q.bool(b -> b.mustNot(mustNotQueries)));
+    }
+
+    public static Query buildMustNotFilterQueryWithValue(String field, String value) {
+        return Query.of(q -> q.bool(b -> b.mustNot(mn -> mn.term(t -> t.field(field).value(value)))));
+    }
+
+    public static Query buildFilterQueryWithRangeDate(String field, Date from, Date to) {
+        return Query.of(q -> q.range(r -> {
+            RangeQuery.Builder builder = r.field(field);
+            if (ObjectUtils.isNotEmpty(from)) {
+                builder.from(DATE_FORMAT.format(from));
+            }
+            if (ObjectUtils.isNotEmpty(to)) {
+                builder.to(DATE_FORMAT.format(to));
+            }
+            return builder;
+        }));
+    }
+
 
     public static Query combineFilters(List<Query> filters) {
         if (CollectionUtils.isEmpty(filters)) return null;
